--- a/3ds.html
+++ b/3ds.html
@@ -8,16 +8,16 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="home.css">
 
     <meta content="3DS Web Stuff" property="og:title" />
     <meta content="A collection of games and other stuff designed specifically for the Nintendo 3DS browser" property="og:description" />
     <meta name="description" content="A collection of games and other stuff designed specifically for the Nintendo 3DS browser">
 
-    <script src="scripts/global.js" type="text/javascript"></script>
-    <script src="scripts/lib/anim.js" type="text/javascript"></script>
-    <script src="scripts/home.js" type="text/javascript"></script>
+    <script src="global.js" type="text/javascript"></script>
+    <script src="anim.js" type="text/javascript"></script>
+    <script src="home.js" type="text/javascript"></script>
 
 </head>
 <body>
